--- a/Exercise.html
+++ b/Exercise.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="card">
-        <img class="card-img-top" src="Images/WalkADay.JPG">
+        <img class="card-img-top" src="Images/WalkADay.jpg">
         
         <hr>
         <p class="card-text">Walk two times a day</p>
