--- a/Tips.html
+++ b/Tips.html
@@ -84,7 +84,7 @@
 
 <div class="row">
     <div class=“tips-pictures”>
-        <img src="Images/FoodGroups.JPG" style="float:left; margin-left:15px; margin-right: 25px; margin-bottom: 25px">
+        <img src="Images/FoodGroups.jpg" style="float:left; margin-left:15px; margin-right: 25px; margin-bottom: 25px">
        
         <div class=“tips-text">
             <h3>Tips and Tricks</h3>
