--- a/AboutUs.html
+++ b/AboutUs.html
@@ -80,7 +80,7 @@
     <hr>
 
             <div class="aboutusimage" style="float:left; margin-right: 15px">
-                <img src="Images/heartdisease.PNG">
+                <img src="Images/heartdisease.jpg">
                
             </div>
 
