--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="row mt-50">
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="images/weight.jpg" alt="excess weight">
+            <img src="images/weight.JPG" alt="excess weight">
             <div class="caption">
               <h3>Excess weight risks</h3>
               <p>Excess weight increases risks for other health issues,
